Error Mitigation/MagiCoder/Data/javax_sql_rowset_serial/javax_sql_rowset_serialOutputResult.txt
Sample: SerialBlob_2
----------------------------------------------------------------
stdout:
1 2 3 
================================================================

Sample: SerialBlob_4
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialBlob_4.java:16: error: unreported exception IOException; must be caught or declared to be thrown
            while ((data = inputStream.read())!= -1) {
                                           ^
1 error


================================================================

Sample: SerialClob_3
----------------------------------------------------------------
stderr:
java.lang.ClassNotFoundException: org.hsqldb.jdbc.JDBCDriver
	at java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:641)
	at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:188)
	at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:525)
	at jdk.compiler/com.sun.tools.javac.launcher.Main$MemoryClassLoader.loadClass(Main.java:600)
	at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:525)
	at java.base/java.lang.Class.forName0(Native Method)
	at java.base/java.lang.Class.forName(Class.java:375)
	at SerialClob_3.main(SerialClob_3.java:12)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: SerialClob_4
----------------------------------------------------------------
stderr:
java.sql.SQLException: Cannot instantiate a SerialClob object with a null Clob object
	at java.sql.rowset/javax.sql.rowset.serial.SerialClob.<init>(SerialClob.java:148)
	at SerialClob_4.main(SerialClob_4.java:10)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: SerialClob_5
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialClob_5.java:8: error: no suitable constructor found for SerialClob(String)
            SerialClob serialClob = new SerialClob("Hello, World!");
                                    ^
    constructor SerialClob.SerialClob(char[]) is not applicable
      (argument mismatch; String cannot be converted to char[])
    constructor SerialClob.SerialClob(Clob) is not applicable
      (argument mismatch; String cannot be converted to Clob)
1 error


================================================================

Sample: SerialClob_6
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialClob_6.java:14: error: no suitable constructor found for SerialClob(String)
            SerialClob serialClob = new SerialClob(clob.getSubString(1, (int) clob.length()));
                                    ^
    constructor SerialClob.SerialClob(char[]) is not applicable
      (argument mismatch; String cannot be converted to char[])
    constructor SerialClob.SerialClob(Clob) is not applicable
      (argument mismatch; String cannot be converted to Clob)
./Data/javax_sql_rowset_serial/javaFiles/SerialClob_6.java:17: error: Alternatives in a multi-catch statement cannot be related by subclassing
        } catch (SQLException | SerialException e) {
                                ^
  Alternative SerialException is a subclass of alternative SQLException
2 errors


================================================================

Sample: SerialClob_10
----------------------------------------------------------------
================================================================

Sample: SerialJavaObject_4
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialJavaObject_4.java:5: error: constructor SerialJavaObject in class SerialJavaObject cannot be applied to given types;
        SerialJavaObject obj1 = new SerialJavaObject();
                                ^
  required: Object
  found:    no arguments
  reason: actual and formal argument lists differ in length
./Data/javax_sql_rowset_serial/javaFiles/SerialJavaObject_4.java:6: error: constructor SerialJavaObject in class SerialJavaObject cannot be applied to given types;
        SerialJavaObject obj2 = new SerialJavaObject();
                                ^
  required: Object
  found:    no arguments
  reason: actual and formal argument lists differ in length
2 errors


================================================================

Sample: SerialRef_2
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialRef_2.java:8: error: constructor SerialRef in class SerialRef cannot be applied to given types;
            SerialRef serialRef = new SerialRef();
                                  ^
  required: Ref
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

Sample: SerialRef_3
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialRef_3.java:5: error: incompatible types: Object cannot be converted to Ref
        SerialRef ref1 = new SerialRef(new Object());
                                       ^
./Data/javax_sql_rowset_serial/javaFiles/SerialRef_3.java:6: error: incompatible types: Object cannot be converted to Ref
        SerialRef ref2 = new SerialRef(new Object());
                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


================================================================

Sample: SerialRef_4
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SerialRef_4.java:5: error: incompatible types: Object cannot be converted to Ref
        SerialRef serialRef = new SerialRef(new Object());
                                            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: SQLInputImpl_3
----------------------------------------------------------------
output:
./Data/javax_sql_rowset_serial/javaFiles/SQLInputImpl_3.java:6: error: constructor SQLInputImpl in class SQLInputImpl cannot be applied to given types;
        SQLInputImpl input = new SQLInputImpl();
                             ^
  required: Object[],Map<String,Class<?>>
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

